# home-dashboard

./: .env.example  Dockerfile  Makefile  README.md  build_and_push.sh  bump_tag.sh  compose.yaml  main.py  pyproject.toml  run.sh
.github/: copilot-instructions.md
static/css/: style.css
static/js/: app.js
templates/: index.html
