[project]
name = "home-dashboard"
version = "0.1.0"
description = "A simple web app to show tram times and football fixtures in Home Assistant"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.1.1",
]
